--- a/src/static_folder/index.html
+++ b/src/static_folder/index.html
@@ -5,14 +5,17 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="./css/index.css">
+
+	<link rel="stylesheet" href="/css/index.css">
 	<title>Document</title>
 </head>
 
 <body>
 	<p id="txt1">Home</p>
-<img src="./images/h.png" />
+		<script src="/js/index.js"></script>
+<img src="/images/h.png" />
+
 </body>
-<script src="./js/index.js"></script>
+
 
 </html>
